[package]
name = "vintage-radio"
version = "1.0.0"
description = "A retro-style internet radio player"
authors = ["Phil Jung"]
edition = "2021"

[lib]
name = "vintage_radio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
